--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 body {
   background-color: #008b8b;
   color: #fff;
+  overflow: hidden;
 }
 
 .centre {
@@ -50,14 +51,14 @@ main .container {
 }
 .color1 p,
 .color2 p,
-.color3 p{
-    width: 30px;
-    height: 30px;
-    background-color: #fff;
-    color: #008b8b;
-    font-weight: bolder;
-    border-radius: 50%;
-    cursor: pointer;
+.color3 p {
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  color: #008b8b;
+  font-weight: bolder;
+  border-radius: 50%;
+  cursor: pointer;
 }
 .color1 {
   background-color: #9e9520;
@@ -73,8 +74,9 @@ main .container {
   position: absolute;
   justify-content: space-around;
   /* As border is of 50px, 50-20 = 30 */
-  width: 360px;
   bottom: -35px;
+  /* same as .color width */
+  width: 360px;
   font-size: 1.2rem;
   color: #008b8b;
   font-weight: bolder;
@@ -101,6 +103,58 @@ main .container {
   height: 2rem;
   transition: all 0.5s;
 }
-.hide{
+.hide {
   display: none;
+}
+
+/* small screens */
+@media (max-width: 600px) {
+  .box {
+    width: 300px;
+    height: 300px;
+  }
+
+  .color {
+    /* width of .box - (leftBorder + rightBorder) */
+    /* 300 - (20+20)*/
+    width: 260px;
+
+    /* height of .box - (leftBorder + rightBorder) */
+    /* 300 - (20+50)*/
+    height: 230px;
+  }
+  .colorHexNum {
+    /* same as .color width */
+    width: 260px;
+  }
+
+  .generate {
+    width: 300px;
+  }
+}
+
+/* extra small screens */
+@media (max-width: 350px) {
+  .box {
+    width: 250px;
+    height: 250px;
+  }
+
+  .color {
+    /* width of .box - (leftBorder + rightBorder) */
+    /* 250 - (20+20)*/
+    width: 210px;
+
+    /* height of .box - (leftBorder + rightBorder) */
+    /* 250 - (20+50)*/
+    height: 180px;
+  }
+  .colorHexNum {
+    /* same as .color width */
+    width: 210px;
+  }
+
+  .generate {
+    width: 250px;
+  }
 }
